deploy/namespaces/monitoring/netpol/02-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
