deploy/namespaces/monitoring/netpol/02.d-allow-kube-api-egress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-api-egress
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.2.88/32
    ports:
    - protocol: TCP
      port: 6443
