deploy/namespaces/monitoring/netpol/04-allow-prometheus-scrape-airflow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-airflow-metrics-from-prometheus
  namespace: airflow
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
      - protocol: TCP
        port: 9102   # statsd-exporter

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-airflow-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - namespaceSelector: {}     # tous namespaces
      podSelector: {}
    ports:
      - protocol: TCP
        port: 9102   # statsd-exporte
