deploy/namespaces/monitoring/netpol/05-prometheus-monitoring-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-metrics-from-prometheus
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 9000

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - namespaceSelector: {}     # tous namespaces
      podSelector:
        matchLabels:
          app: minio
    ports:
    - protocol: TCP
      port: 9000
