deploy/namespaces/monitoring/netpol/11-allow-prometheus-to-proxmox.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-proxmox
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.2.5/32
    ports:
    - protocol: TCP
      port: 9221
