deploy/namespaces/monitoring/netpol/12-allow-node-exporter-to-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-explorer-metrics-from-prometheus
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
          app.kubernetes.io/name: prometheus-node-exporter
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:

    - protocol: TCP
      port: 9100

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-explorer-metrics-to-prometheus
  namespace: monitoring
spec:
  egress:
  - ports:
    - port: 9100
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus-node-exporter
    - ipBlock:
        cidr: 192.168.2.88/32   # IP host node-exporter
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Egress
