deploy/namespaces/monitoring/netpol/14-prometheus-monitoring-kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-state-metrics-from-prometheus
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
          app.kubernetes.io/name: kube-state-metrics
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:

    - protocol: TCP
      port: 8080

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-state-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector: 
        matchLabels:
          app.kubernetes.io/name: kube-state-metrics
    ports:
    - protocol: TCP
      port: 8080
