deploy/namespaces/monitoring/netpol/16-prometheus-monitoring-kube-stack.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-stack-metrics-from-prometheus
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
          app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:

    - protocol: TCP
      port: 10250

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-stack-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector: 
        matchLabels:
          app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
    ports:
    - protocol: TCP
      port: 10250
