deploy/namespaces/monitoring/netpol/19-prometheus-monitoring-postgres-medplum.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-medplum-metrics-from-prometheus
  namespace: medplum
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-postgres-exporter
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 9187

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-medplum-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - namespaceSelector: {}     # tous namespaces
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus-postgres-exporter
    ports:
    - protocol: TCP
      port: 9187
