deploy/namespaces/monitoring/netpol/20-prometheus-monitoring-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager-metrics-from-prometheus
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
          app.kubernetes.io/name: alertmanager
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:

    - protocol: TCP
      port: 9093
    - protocol: TCP
      port: 8080

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector: 
        matchLabels:
          app.kubernetes.io/name: alertmanager
    ports:
    - protocol: TCP
      port: 9093
    - protocol: TCP
      port: 8080
