deploy/namespaces/monitoring/netpol/21-prometheus-monitoring-redis-medplum.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-metrics-from-prometheus
  namespace: medplum
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-redis-exporter
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 9121

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: medplum
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus-redis-exporter
    ports:
    - protocol: TCP
      port: 9121
