deploy/namespaces/monitoring/netpol/24-prometheus-monitoring-worker-fhir-pompetrack-core.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-fhir-pompetrack-core-metrics-from-prometheus
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app: worker-fhir
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 80

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-fhir-pompetrack-core-metrics-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pompetrack-core
      podSelector:
        matchLabels:
          app: worker-fhir
    ports:
    - protocol: TCP
      port: 80
